[package]
name    = "wormhole-solana"
version = "0.1.0"
edition = "2021"

[lib]
name = "wormhole_solana"

[profile.release]
opt-level = 3
lto       = "thin"

[dependencies]
borsh           = "0.9.3"
bstr            = "0.2.17"
byteorder       = "1.4.3"
hex             = "0.4.3"
hex-literal     = "0.3.4"
sha3            = "0.10.4"
thiserror       = "1.0.34"
solana-program  = "1.10.29"

nom             = { version="7", default-features=false, features=["alloc"] }
primitive-types = { version="0.11", default-features=false }
wormhole-sdk = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.18.7" }
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.18.7"}

[dev-dependencies]
solana-program         = "1.10.29"
solana-program-test    = "1.10.29"
solana-sdk             = "1.10.29"
tokio                  = "1.14.1"

[patch.crates-io]
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.18.7" }
